add Massa node endpoint
